# ai-scaffold

./: .dockerignore  .gitignore  DOCKER_SETUP_FIXES.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cursor/: mcp.json
.cursor/rules/: memory_conventions.mdc  persona.mdc
.memory/: activeContext.md  memory_bank_instructions.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
apps/web_admin/: Dockerfile  package-lock.json  package.json
apps/web_admin/src/app/: layout.tsx  page.tsx
apps/web_admin/types/: web-ui.d.ts
apps/web_app/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
apps/web_app/src/app/: layout.tsx  page.tsx
apps/web_app/src/app/dashboard/: page.tsx
apps/web_app/src/app/register/: page.tsx
apps/web_app/src/app/signin/: page.tsx
apps/web_app/src/components/: AuthProvider.tsx
apps/web_app/src/hooks/: useAuth.ts
apps/web_app/src/i18n/: index.ts
apps/web_app/src/i18n/locales/en/: common.json
apps/web_app/src/lib/: api.ts
apps/web_app/src/store/: auth.ts
apps/web_site/: Dockerfile  package-lock.json  package.json
scripts/: test-docker-setup.sh
services/ai_service/: Dockerfile  README.md  pyproject.toml
services/ai_service/app/: main.py
services/gateway_service/: Dockerfile  README.md  pyproject.toml
services/gateway_service/app/: auth.py  config.py  main.py  user_client.py
services/gateway_service/app/routers/: __init__.py  auth.py  users.py
services/gateway_service/tests/: __init__.py  conftest.py  test_auth.py  test_config.py  test_create_user.py  test_main.py  test_routers_auth.py  test_routers_focused.py  test_routers_users.py  test_user_client.py
services/notification_service/: Dockerfile  README.md  pyproject.toml
services/notification_service/app/: main.py
services/user_service/: Dockerfile  README.md  pyproject.toml
services/user_service/app/: __init__.py  database.py  grpc_service.py  main.py  models.py  repository.py
services/user_service/tests/: __init__.py  conftest.py  test_database.py  test_grpc_service.py  test_main.py  test_models.py  test_repository.py
