[tool.poetry]
name = "ai-service"
version = "0.1.0"
description = "AI service for interfacing with LLMs in my-scaffold-project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
# Add specific LLM SDKs here later, e.g.:
# openai = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 